--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-paginate": "^8.3.0",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
