--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.29.0",
+    "antd": "^5.24.3",
     "clsx": "^2.1.1",
     "motion": "^12.0.6",
     "next": "15.1.6",
