--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-loading-skeleton": "^3.5.0",
     "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
