--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tabler/icons-react": "^3.29.0",
     "clsx": "^2.1.1",
     "motion": "^12.0.6",
-    "next": "15.1.6",
+    "next": "^16.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
